--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style ></style>
+
+    <link type="text/css" rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <div class="main">
+        <div class="header">
+
+        </div>
+        <div class="body">
+            <img src="img/WechatIMG1.jpeg">
+            <img src="img/WechatIMG2.jpeg">
+            <img src="img/WechatIMG3.jpeg">
+            <img src="img/WechatIMG4.jpeg">
+            <img src="img/WechatIMG5.jpeg">
+        </div>
+        <div class="footer">
+
+        </div>
+
+    </div>
 
 </body>
 </html>
