--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <div class="body">
             <img src="img/WechatIMG1.jpeg">
+            <img src="img/WechatIMG1.jpeg">
             <img src="img/WechatIMG2.jpeg">
             <img src="img/WechatIMG3.jpeg">
             <img src="img/WechatIMG4.jpeg">
